--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #fff2ef;
+    background-color: white;
     padding: 12px 25px;
     border-radius: 4px;
     border: 1px solid tomato;
